SAK-3837 http://bugs.sakaiproject.org/jira/browse/SAK-3837 Fix Memory Settings for Sakai Demo out of the Box
git-svn-id: https://source.sakaiproject.org/svn/trunk/sakai@6490 66ffb92e-73f9-0310-93c1-f5514f145a0a